在Chrome扩展实现录屏（支持音视频，输出两个文件）
在Chrome 37版本中测试通过

--- a/ChromeExTest/chrome-extension/background.html
+++ b/ChromeExTest/chrome-extension/background.html
@@ -3,6 +3,7 @@
 	<head>
 		<title></title>
 		<script src="whammy.js"></script>
+		<!--script src="recorder.js"></script-->
 	</head>
 	<body>
 		<video id="video" autoplay=""></video>
