--- a/ChromeExTest/chrome-extension/popup.html
+++ b/ChromeExTest/chrome-extension/popup.html
@@ -10,7 +10,8 @@
 		<br />
 		<button id="record">Record</button>
 		<button id="stop">Stop</button>
-		<a style="display:none" id="download" download="capture.webm">Download WebM</a>
+		<a style="display:none" id="download_video" download="video.webm">Download WebM</a>
+		<a style="display:none" id="download_audio" download="audio.wav">Download WAV</a>
 		<script src="popup.js"></script>
 	</body>
 </html>
